# Linkscout

./: .gitignore  AGENTS.md  MVP.md  chirurgical-test-plan.md  design.md  opencode.json  package-lock.json  pyrightconfig.json  start-tests-watch.sh  start-tests.sh  start.sh  vercel.json
.github/workflows/: ci.yml
.opencode/agents/: devops-automator.md  frontend-artisan.md  pipeline-architect.md  scraper-engineer.md
linkscout/: .env.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
linkscout/app/: globals.css  layout.tsx  manifest.ts  og-image.tsx  opengraph-image.tsx  page.tsx  robots.txt  sitemap.ts
linkscout/components/: AdvancedFilters.tsx  AlertsView.tsx  CommandBar.tsx  CommandPalette.tsx  CompanyLogo.tsx  DashboardButton.tsx  DetailPanel.tsx  (+27 more)
scraper/: .coverage  ai.py  discord_notify.py  dorker.py  enrich.py  guest_scraper.py  indeed_scraper.py  main.py  notifier.py  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  utils.py  wttj_scraper.py
worker-rs/: .env.example  Cargo.toml  Dockerfile
worker-rs/src/: app_state.rs  cache.rs  cache_redis.rs  config.rs  main.rs  quota.rs  quota_redis.rs  retry.rs
worker-rs/src/ai/: groq.rs  mod.rs  prompts.rs  provider.rs
worker-rs/src/algo/: coherence.rs  filter.rs  mod.rs
worker-rs/src/auth/: supabase.rs
worker-rs/src/db/: supabase.rs
worker-rs/src/enrich/: logo.rs
worker-rs/src/models/: job.rs
worker-rs/src/notify/: discord.rs
worker-rs/src/routes/: analyze.rs  enrich.rs  health.rs  message.rs  mod.rs  quota.rs  resume.rs  scrape.rs  webhook.rs
worker-rs/src/scraper/: apify.rs  dorker.rs  guest.rs  mod.rs
(+79 files in other folders)
