[package]
name = "linkscout-worker"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.22"
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
dotenvy = "0.15"
lopdf = { version = "0.36", default-features = false }
futures = "0.3"
