[package]
name = "linkscout-worker"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
reqwest = { version = "0.12.0", features = ["json"] }
tokio-stream = "0.1.0"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
chrono = { version = "0.4.0", features = ["serde"] }
scraper = "0.22.0"
regex = "1.0.0"
rand = "0.8.0"
uuid = { version = "1.0.0", features = ["v4"] }
anyhow = "1.0.0"
thiserror = "1.0.0"
async-trait = "0.1.0"
dotenvy = "0.15.0"
lopdf = { version = "0.36.0", default-features = false }
futures = "0.3.0"
urlencoding = "2.1.0"
redis = { version = "0.28.0", features = ["tokio-comp"] }
